--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "server": "nodemon --watch server -e js,json --delay 1000ms server/index.js"
   },
   "dependencies": {
+    "ace-builds": "^1.4.12",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "dotenv": "^10.0.0",
@@ -18,7 +19,8 @@
     "framework7-vue": "^6.0.17",
     "path": "^0.12.7",
     "postcss": "^8.3.0",
-    "vue": "^3.0.0"
+    "vue": "^3.0.0",
+    "vue3-ace-editor": "^2.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
