--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "core-js": "^3.6.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "framework7": "^6.0.17",
     "framework7-icons": "^4.0.2",
     "framework7-vue": "^6.0.17",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "postcss": "^8.3.0",
     "vue": "^3.0.0",
