--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "filemanager",
   "version": "0.1.0",
   "private": true,
-  "bin": "./server/index.js",
+  "bin": "./server/bin/main.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -13,6 +13,7 @@
   "dependencies": {
     "ace-builds": "^1.4.12",
     "axios": "^0.21.1",
+    "bcryptjs": "^2.4.3",
     "core-js": "^3.6.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -25,6 +26,7 @@
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "postcss": "^8.3.0",
+    "prompt": "^1.1.0",
     "vue": "^3.0.0",
     "vue3-ace-editor": "^2.0.2"
   },
@@ -61,7 +63,9 @@
   "pkg": {
     "scripts": "server/**/*.js",
     "assets": "dist/**/*",
-    "targets": [ "node12-macos-x64" ],
+    "targets": [
+      "node12-macos-x64"
+    ],
     "outputPath": "dist-server"
   }
 }
