--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "postcss": "^8.3.0",
     "prompt": "^1.1.0",
     "vue": "^3.0.0",
+    "vue-showdown": "^3.1.0",
     "vue3-ace-editor": "^2.0.2"
   },
   "devDependencies": {
