--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
     "nodemon": "^2.0.7",
-    "pkg": "^5.2.1"
+    "pkg": "^5.2.1",
+    "vue-loader-v16": "^16.0.0-beta.5.4"
   },
   "eslintConfig": {
     "root": true,
