--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "vue3-ace-editor": "^2.0.2"
   },
   "devDependencies": {
+    "@jest-mock/express": "^1.4.2",
+    "@types/jest": "^26.0.24",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
@@ -39,6 +41,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
+    "jest": "^27.0.6",
     "nodemon": "^2.0.7",
     "pkg": "^5.2.1",
     "vue-loader-v16": "^16.0.0-beta.5.4"
@@ -46,7 +49,8 @@
   "eslintConfig": {
     "root": true,
     "env": {
-      "node": true
+      "node": true,
+      "jest": true
     },
     "extends": [
       "plugin:vue/vue3-essential",
@@ -69,5 +73,11 @@
       "node12-macos-x64"
     ],
     "outputPath": "dist-server"
+  },
+  "jest": {
+    "verbose": true,
+    "roots": [
+      "<rootDir>/server/"
+    ]
   }
 }
