--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "server": "nodemon --watch server -e js,json --delay 1000ms server/index.js",
-    "pkg": "pkg . "
+    "pkg": "pkg . ",
+    "test": "jest"
   },
   "dependencies": {
     "ace-builds": "^1.4.12",
